@@ -1,5 +1,10 @@
 2007-11-30  Satoshi Nakagawa <artension@gmail.com>
 
+	Fixed a bug, an empty string should be rejected for a raw command.
+	Improved key event handlers to use symbols instead of strings.
+
+2007-11-30  Satoshi Nakagawa <artension@gmail.com>
+
 	Now privmsg command is the default setting for pasting on non-Japanese environment.
 
 2007-11-30  Satoshi Nakagawa <artension@gmail.com>
